--- a/Numbers/app/src/main/res/values/strings.xml
+++ b/Numbers/app/src/main/res/values/strings.xml
@@ -9,11 +9,17 @@
     <string name="menu_title_group">Other</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="numbers_activity_title">Number</string>
+    <string name="saved_numbers_activity_title">Saved numbers</string>
+    <string name="history_numbers_activity_title">History</string>
 
     <!-- NumbersFragment -->
     <string name="edit_text_hint">Enter number</string>
     <string name="spinner_hint">Choose query type</string>
     <string name="button_text">Submit</string>
     <string name="empty_description_text">No description</string>
+
+    <!-- SavedOrHistoryFragment -->
+    <string name="description_empty_view">You don\'t have any data</string>
 
 </resources>
