feat: add delete number funs

--- a/Numbers/app/src/main/res/values/strings.xml
+++ b/Numbers/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <!-- SavedOrHistoryFragment -->
     <string name="description_empty_view">You don\'t have any data</string>
 
+    <!-- Delete number dialog -->
+    <string name="dialog_delete_number_title">Delete current number?</string>
+    <string name="dialog_ok_button">DELETE</string>
+    <string name="dialog_cancel_button">CANCEL</string>
+    <string name="snack_bar_text">Number is deleted</string>
+
 </resources>
